<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/text_light_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Intensidad"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="6000"
        android:id="@+id/bar"/>

    <TextView
        android:id="@+id/text_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Orientacion"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recomendacion"
        android:textSize="18sp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/compass_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/compass"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/compass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dirección: --"
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guardar"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lista"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>

    </LinearLayout>



</LinearLayout>